2005-10-25  Adele Peterson  <adele@apple.com>

        Reviewed by Hyatt.

        - fixed <rdar://problem/3612121> setting focus, by tabbing, searching, or with JavaScript does not scroll overflow:auto/scroll/overlay to reveal focused element (3480)

        * khtml/rendering/render_layer.cpp: 
        (khtml::RenderLayer::scrollRectToVisible): Added case for when the renderer has an overflow clip, so we can scroll overflow and views recursively.

2005-10-25  Adele Peterson  <adele@apple.com>

        Reviewed by Vicki.

        Fixed <rdar://problem/4098450> RoboHelp-generated html help system crashes in latest Safari -KWQValueListImpl::copyOnWrite

        The tokenizer's timer was causing the tokenizer to be deleted twice.  
        In timerEvent, we'll now check to see if the write has destroyed the tokenizer before trying to do it again.

        * khtml/html/htmltokenizer.cpp:
        (khtml::HTMLTokenizer::write): Returns a boolean to indicate whether end() gets called
        (khtml::HTMLTokenizer::timerEvent): Moved code from allDataProcessed, and now, checks to see if write() called end() to notify WebKit that processing is done.
        * khtml/html/htmltokenizer.h: write() returns a bool.
        * khtml/xml/xml_tokenizer.cpp: (khtml::XMLTokenizer::write): returns a bool (always false in the XMLTokenizer case).
        * khtml/xml/xml_tokenizer.h: ditto.

2005-10-25  Beth Dakin  <bdakin@apple.com>

        Reviewed by Maciej

	Fix for <rdar://problem/4148730> SureSec si#182 safari heap overflow.
	When a table has a really huge rowSpan, Safari used to crash because
	the malloc of the grid for the table failed. This fix just checks for
	the success of the malloc.

        * khtml/rendering/render_table.cpp:
        (RenderTableSection::ensureRows): Return false if the grid resize is not 
	successful.
        (RenderTableSection::addCell): Return early if ensureRows() returned false.